--- a/index.html
+++ b/index.html
@@ -45,6 +45,114 @@
             </div>
         </div>
     </section>
+
+    <section class="gallery">
+        <div class="container">
+            <h1 class="visually-hidden">Gallery</h1>
+            <ul class="row g-3 m-0 p-0">
+                <li class="col-lg-5">
+                    <a href="#" class="gallery__link position-relative d-block">
+                        <img src="./images/gallery-1.png" alt="" class="gallery-image img-fluid">
+                        <div class="gallery__image__caption">
+                            <h1>Man Wearing Black Hat and Black Coat</h1>
+                            <div class="pixabay">
+                                <img src="./images/pixabay.png" alt="">
+                                <p class="d-inline-block">Pixabay</p>
+                            </div>
+                        </div>
+                    </a>
+                </li>
+                <li class="col-lg-7">
+                    <a href="#" class="gallery__link position-relative d-block">
+                        <img src="./images/gallery-2.png" alt="" class="gallery-image img-fluid">
+                        <div class="gallery__image__caption">
+                            <h1>Man Wearing Black Hat and Black Coat</h1>
+                            <div class="pixabay">
+                                <img src="./images/pixabay.png" alt="">
+                                <p class="d-inline-block">Pixabay</p>
+                            </div>
+                        </div>
+                    </a>
+                </li>
+                <li class="col-lg-4">
+                    <div class="row g-3">
+                        <div class="col-lg-12">
+                            <a href="#" class="gallery__link position-relative d-block">
+                                <img src="./images/gallery-3.png" alt="" class="gallery-image img-fluid gallery__image_helf">
+                                <div class="gallery__image__caption">
+                                    <h1>Man Wearing Black Hat and Black Coat</h1>
+                                    <div class="pixabay">
+                                        <img src="./images/pixabay.png" alt="">
+                                        <p class="d-inline-block">Pixabay</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-lg-12">
+                            <a href="#" class="gallery__link position-relative d-block">
+                                <img src="./images/gallery-4.png" alt="" class="gallery-image img-fluid gallery__image_helf">
+                                <div class="gallery__image__caption">
+                                    <h1>Man Wearing Black Hat and Black Coat</h1>
+                                    <div class="pixabay">
+                                        <img src="./images/pixabay.png" alt="">
+                                        <p class="d-inline-block">Pixabay</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </li>
+                <li class="col-lg-4">
+                    <a href="#" class="gallery__link position-relative d-block">
+                        <img src="./images/gallery-5.png" alt="" class="gallery-image img-fluid">
+                        <div class="gallery__image__caption">
+                            <h1>Man Wearing Black Hat and Black Coat</h1>
+                            <div class="pixabay">
+                                <img src="./images/pixabay.png" alt="">
+                                <p class="d-inline-block">Pixabay</p>
+                            </div>
+                        </div>
+                    </a>
+                </li>
+                <li class="col-lg-4">
+                    <a href="#" class="gallery__link position-relative d-block">
+                        <img src="./images/gallery-6.png" alt="" class="gallery-image img-fluid">
+                        <div class="gallery__image__caption">
+                            <h1>Man Wearing Black Hat and Black Coat</h1>
+                            <div class="pixabay">
+                                <img src="./images/pixabay.png" alt="">
+                                <p class="d-inline-block">Pixabay</p>
+                            </div>
+                        </div>
+                    </a>
+                </li>
+                <li class="col-lg-7">
+                    <a href="#" class="gallery__link position-relative d-block">
+                        <img src="./images/gallery-7.png" alt="" class="gallery-image img-fluid">
+                        <div class="gallery__image__caption">
+                            <h1>Man Wearing Black Hat and Black Coat</h1>
+                            <div class="pixabay">
+                                <img src="./images/pixabay.png" alt="">
+                                <p class="d-inline-block">Pixabay</p>
+                            </div>
+                        </div>
+                    </a>
+                </li>
+                <li class="col-lg-5">
+                    <a href="#" class="gallery__link position-relative d-block">
+                        <img src="./images/gallery-8.png" alt="" class="gallery-image img-fluid">
+                        <div class="gallery__image__caption">
+                            <h1>Man Wearing Black Hat and Black Coat</h1>
+                            <div class="pixabay">
+                                <img src="./images/pixabay.png" alt="">
+                                <p class="d-inline-block">Pixabay</p>
+                            </div>
+                        </div>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </section>
     
 
 
