--- a/index.html
+++ b/index.html
@@ -153,6 +153,16 @@
             </ul>
         </div>
     </section>
+
+    <footer class="footer py-5 text-center">
+        <p class="footer__text mx-auto">Album example is &copy; Bootstrap, but please download and customize it for
+            yourself! <br>
+            New to Bootstrap? Visit the homepage or read our getting started guide.
+        </p>
+        <a href="#" class="btn btn-primary"><span class="fas fa-chevron-up">
+            
+        </span></a>
+    </footer>
     
 
 
