--- a/index.html
+++ b/index.html
@@ -154,14 +154,12 @@
         </div>
     </section>
 
-    <footer class="footer py-5 text-center">
+    <footer class="footer text-center py-5">
         <p class="footer__text mx-auto">Album example is &copy; Bootstrap, but please download and customize it for
             yourself! <br>
             New to Bootstrap? Visit the homepage or read our getting started guide.
         </p>
-        <a href="#" class="btn btn-primary"><span class="fas fa-chevron-up">
-            
-        </span></a>
+        <a href="#" class="btn btn-primary"></a>
     </footer>
     
 
